# episodic-memory-llm

./: LICENSE  README.md  direct_v3_test.py  pyproject.toml  requirements.txt  simple_cognitive_test.py  test_gpu.py
analysis/: competitor_analysis.py
data/: evaluation_scenarios_dataset.json  test_dataset.json  training_dataset.json  validation_dataset.json
demos/: practical_demos.py
demos/sessions/: miguel_session.json
experiments/: advanced_benchmark_suite.py  benchmark_baseline.py  benchmark_episodic_vs_baseline.py  benchmark_master_final.py  benchmark_v3_ultimate.py  test_real_system.py  test_your_system_now.py
notebooks/: 02_echo_demo_interactivo.ipynb  03_echo_funcional_demo.ipynb
optimizations/: incremental_improvements.py
outputs/: episodic_memory_results.json
results/: baseline_test_memory_conversation.json  baseline_test_memory_data.pkl  baseline_test_memory_index.faiss  episodic_memory_test_tkg.json  episodic_vs_baseline_benchmark_1751911824.json  episodic_vs_baseline_benchmark_1751912245.json  episodic_vs_baseline_benchmark_1751967969.json  episodic_vs_baseline_benchmark_1751969814.json  episodic_vs_baseline_benchmark_1751970187.json  episodic_vs_baseline_benchmark_1751971297.json  episodic_vs_baseline_benchmark_FIXED_1751972329.json  test_tkg.json
src/benchmarks/: legitimate_benchmark.py  system_adapter.py
src/data/: synthetic_conversations.py
src/evaluation/: honest_evaluator.py  memory_metrics.py
src/extraction/: generic_information_extractor.py
src/memory/: advanced_memory_retrieval.py  advanced_memory_retrieval_final.py  advanced_memory_retrieval_v3.py  advanced_memory_retrieval_v3_fixed.py  advanced_preference_system.py  cognitive_integration_system.py  ebbinghaus_memory_system.py  interference_memory_model.py  temporal_knowledge_graph.py  temporal_knowledge_graph_final.py
src/models/: baseline_rag.py  baseline_rag_fixed.py  baseline_rag_functional.py  cognitive_episodic_memory_llm.py  episodic_memory_llm.py  episodic_memory_llm_v2.py  episodic_memory_llm_v3.py  (+1 more)
(+3 files in other folders)
