[project]
name = "episodic-memory-llm"
version = "0.1.0"
description = "Persistent Episodic Memory for Large Language Models using Temporal Knowledge Graphs"
authors = [
    {name = "Tu Nombre", email = "tu-email@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.12.0",
    "wandb>=0.15.0",
    "accelerate>=0.20.0",
    "networkx>=3.1",
    "torch-geometric>=2.3.0",
    "faiss-cpu>=1.7.4",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
